Fixed z-index for language selection

--- a/public/styles/landing-page.css
+++ b/public/styles/landing-page.css
@@ -69,6 +69,7 @@ select{
     padding: 10px;
     background-color: #fff;
     width: 250px;
+    z-index: -100;
 }
 
 .mynetwork {
